--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,7 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<p>Yeet</p>
-<p>Yeet 2</p>
-<p>Yeet 3</p>
-
-
-<h1>Bruhhhhhhhhhhhhhhhhhhhh</h1>
-
-<p>Test</p>
-
-<h4>What in the........</h4>
+<h1>God i love antacid lime + berry bites</h1>
 
 </body>
 </html>
